--- a/partials/campaign_info.html
+++ b/partials/campaign_info.html
@@ -5,6 +5,7 @@
   <div class="dropdown closed">
     <button class="btn left"  ng-click="togglePanel('social_accounts')">share!</button>
     <a href="#/campaign/{{editCampaign.id}}/edit" class="btn left" ng-click="resetStep()">edit</a>
+    <a href="#">Rewards</a>
   </div>
 </header>
 
