--- a/partials/campaign_info.html
+++ b/partials/campaign_info.html
@@ -1,6 +1,6 @@
 <header>
-  <button ng-click='toggleSidebar()' class="btn right">menu</button>
-  <button ng-click="toggleHeaderDropdown()" class="btn left">gear</button>
+  <button ng-click='toggleSidebar()' class="btn left">menu</button>
+  <button ng-click="toggleHeaderDropdown()" class="btn right">gear</button>
   <h2 ng-bind="editCampaign.title"></h2>
   <div class="dropdown closed">
     <button class="btn left"  ng-click="togglePanel('social_accounts')">share!</button>
