--- a/partials/dashboard.html
+++ b/partials/dashboard.html
@@ -1,5 +1,5 @@
 <header>
-  <button ng-click=toggleSidebar() class="btn right">menu</button>
+  <button ng-click=toggleSidebar() class="btn left">menu</button>
   <h1>{{title}}</h1>
 </header>
 
