basic rewards pages

--- a/partials/rewards.html
+++ b/partials/rewards.html
@@ -7,9 +7,10 @@
   <section class="scroller">
     <ul class="object_list">
       <li ng-repeat="reward in rewardsList">
-        <button ng-click="claimReward(reward)" class="btn right {{!reward.claimed || 'claimed'}}">claim</button>
-        <h2 ng-bind="reward.title"></h2>
-        <p>expires <span ng-bind="reward.exp_date"></span></p>
+        <a href="#/rewards/{{reward.id}}">
+          <h2 ng-bind="reward.title"></h2>
+          <p>expires <span ng-bind="reward.exp_date"></span></p>
+        </a>
       </li>
     </ul>
   </section>
