--- a/partials/dashboard.html
+++ b/partials/dashboard.html
@@ -8,12 +8,11 @@
     <button href="#/new" class="btn full_width" ng-click="start_new = true" ng-show="!start_new">+ New Campaign</button>
     <div ng-show="start_new">
       <form ng-submit="createCampaign(new_campaign_title, handle, is_local, new_campaign_locale, discoverable)">
-        <input type="text" name="new_campaign_title" placeholder="Title for new campaign" ng-model="new_campaign_title"/>
         <fieldset>
-          <input id="has_handle_true" type="radio" name="has_handle" ng-model="has_handle" value="new" />
-          <label for="has_handle_true">New listening point</label>
           <input id="has_handle_false" type="radio" name="has_handle" ng-model="has_handle" value="old" />
           <label for="has_handle_false">Previous listening point</label>
+          <input id="has_handle_true" type="radio" name="has_handle" ng-model="has_handle" value="new" />
+          <label for="has_handle_true">New listening point</label>
         </fieldset>
         <fieldset ng-show="has_handle == 'new'">
           fdbk.com/
@@ -25,30 +24,17 @@
             <option ng-repeat="handle in handleList">{{handle}}</option>
             <option disabled="true">no more available listening points</option>
           </select>
-        </fieldset>
-        <!--<fieldset>
-          <input id="is_local_true" type="radio" name="is_local" ng-model="is_local" value="true" />
-          <label for="is_local_true">Has a location</label>
-          <input id="is_local_false" type="radio" name="is_local" ng-model="is_local" value="false" />
-          <label for="is_local_false">Does not have a location</label>
-        </fieldset>
-        
-        <fieldset ng-show="is_local">
-          <input type="text" name="new_campaign_local" ng-model="new_campaign_locale" placeholder="Location for campaign" /><br>
-          
-          <input id="discoverable" ng-model="discoverable" type="checkbox" name="discoverable" value="true" checked=checked />
-          <label for="discoverable">This campaign is discoverable by users nearby.</label>
-        </fieldset>-->
-        
+        </fieldset>     
+        <input type="text" name="new_campaign_title" placeholder="Title for new campaign" ng-model="new_campaign_title"/>   
         <button class="btn" type="submit" ng-click="resetStep()">Save and edit details</button>
         <button class="btn" ng-click="start_new = false" type="button">cancel</button>
       </form>
     </div>
     <ul id="campaign_list" class="object_list">
       <li ng-repeat="campaign in campaignList">
-        <a href="#/campaign/{{campaign.id}}">
-          <h2>{{campaign.title}} <small>- @{{campaign.handle}}</small></h2>
-          <p>{{campaign.description}}</p>
+        <a href="#/campaign/{{campaign.id}}/instances">
+          <small>@{{campaign.handle}}</small>
+          <h2>{{campaign.title}}</h2>
           <div class="clear"></div></a>
       </li>
     </ul>
