--- a/partials/inbox.html
+++ b/partials/inbox.html
@@ -1,6 +1,6 @@
 <header>
   <button ui-event="{click : 'toggleSidebar()'}" class="btn left">menu</button>
-  <h1>{{title}}</h1>
+  <h1 ng-bind="title"></h1>
 </header>
 <div class="scroller_wrapper">
   <div class="scroller">
