--- a/partials/new.html
+++ b/partials/new.html
@@ -13,130 +13,114 @@
       </ol>
     </nav>
     <div class="scroller">
-      <h2>{{buildCampaign.title}}</h2>
-      <section ng-switch on='currentStep'>
-        <div ng-switch-when='0'>
-          <button ng-click="togglePanel('new_question_alt')" class="btn">+ New Question</button>
-          <ol>
-            <li ng-repeat="question in buildCampaign.questionsList">
-              <!--Start 'Multiple Choice' Template-->
-              <div ng-show="question.type == 'multipleChoice'">
-                <h3>Multiple-Choice</h3>
-                <input type="text" name="question_{{question.id}}" ng-model="question.text" placeholder="Enter your question here." />
-                <ul class='answers'>
-                  <li ng-repeat="answer in question.answers">
-                    <input type="text" name="answer_{{question.id}}{{answer.id}}" ng-model="answer.text" placeholder="add an answer here."/>
-                  </li>
-                </ul>
-              </div>
-              <!--End 'Multiple Choice' Template-->
-              
-              <!--Start 'rating' Template-->
-              <div ng-show="question.type == 'rating'">
-                <h3>Rating:</h3>
-                <input type="text" name="question_{{question.id}}" ng-model="question.text" placeholder="Enter your question here." />
-                <ul class='answers'>
-                  <li ng-repeat="answer in question.answers">
-                    <input type="text" name="answer_{{question.id}}{{answer.id}}" ng-model="answer.text" placeholder="add an answer here."/>
-                  </li>
-                </ul>
-              </div>
-              <!--End 'rating' Template-->
-              
-              <!--Start 'freeText' Template-->
-              <div ng-show="question.type == 'freeText'">
-                <h3>Free Text Response:</h3>
-                <input type="text" name="question_{{question.id}}" ng-model="question.text" placeholder="Enter your question here." />
-                <ul class='answers'>
-                  <li ng-repeat="answer in question.answers">
-                    <input type="text" name="answer_{{question.id}}{{answer.id}}" ng-model="answer.text" placeholder="add an answer here."/>
-                  </li>
-                </ul>
-              </div>
-              <!--End 'freeText' Template-->
-              
-              <!--Start 'binary' Template-->
-              <div ng-show="question.type == 'binary'">
-                <h3>Yes or No?</h3>
-                <input type="text" name="question_{{question.id}}" ng-model="question.text" placeholder="Enter your question here." />
-                <ul class='answers'>
-                  <li ng-repeat="answer in question.answers">
-                    <input type="text" name="answer_{{question.id}}{{answer.id}}" ng-model="answer.text" placeholder="add an answer here."/>
-                  </li>
-                </ul>
-              </div>
-              <!--End 'binary' Template-->
-              
-              <!--Start 'number' Template-->
-              <div ng-show="question.type == 'number'">
-                <h3>Choose a number:</h3>
-                <input type="text" name="question_{{question.id}}" ng-model="question.text" placeholder="Enter your question here." />
-                <ul class='answers'>
-                  <li ng-repeat="answer in question.answers">
-                    <input type="text" name="answer_{{question.id}}{{answer.id}}" ng-model="answer.text" placeholder="add an answer here."/>
-                  </li>
-                </ul>
-              </div>
-              <!--End 'number' Template-->
-              
-            </li>
-          </ol>
-        </div>
-        <div ng-switch-when='1'>
-          <form method="post" action="">
-            <input type="text" name="title" ng-model="buildCampaign.reward.title" placeholder="Gift Title" />
-            <input type="text" name="description" ng-model="buildCampaign.reward.description" value="" placeholder="Description"/>
-            <input type="text" name="terms" ng-model="buildCampaign.reward.terms" value="" placeholder="Terms and Conditions"/>
-            <input type="date" name="expiration" ng-model="buildCampaign.reward.exp" placeholder="Expiration Date" />
-          </form>
-        </div>
-        <div ng-switch-when='2'>
-          <ul>
-            <li>This will be a list of the social accounts you have connected to this campaign.</li>
-          </ul>
-          <button class="btn" ng-click="togglePanel('social_accounts')">Add new media account</button>
-        </div>
-        
-        <div ng-switch-when='3'>
-          <form ng-submit="sendInvite(first, last, [perm_respond,perm_export,perm_admin], level, buildCampaign.permissions.pending)">
-            <label for="emails">Send email invitations to others to help manage this campaign.</label>
-            <input ng-model="first" type="text" name="name" placeholder="first name"/>
-            <input ng-model="last" type="text" name="name" placeholder="last name"/>
-            <input ng-model="invite_email" type="email" name="email" placeholder="email"/>
-            <fieldset>
-              <input ng-model="perm_respond" type="checkbox" name="perm_respond" ng-true-value="respond" id="perm_respond"/>
-              <label for="perm_respond">respond</label>
-              <input ng-model="perm_export" type="checkbox" name="perm_export" ng-true-value="export" id="perm_export"/>
-              <label for="perm_export">export</label>
-              <input ng-model="perm_admin" type="checkbox" name="perm_admin" ng-true-value="admin" id="perm_admin"/>
-              <label for="perm_admin">admin</label>
-            </fieldset>
-            <button class="new_invite btn">Send</button>
-          </form>
-          <hr>
-          <h2>Permissions set:</h2>
-          <ul>
-            <li ng-repeat="person in buildCampaign.permissions.accepted">
-              {{person.first}} {{person.last}} <small class="status">permission level: {{person.level}}</small>
-            </li>
-          </ul>
-          <h2>Pending Invites:</h2>
-          <ul>
-            <li ng-repeat="person in buildCampaign.permissions.pending">
-              {{person.first}} {{person.last}} ({{person.email}}, {{person.level}}) <small class="status">pending...</small><button class="btn right clear">resend</button>
-            </li>
-          </ul>
-        </div>
-        
-        <div ng-switch-when='4'>
-          <label for="url">Add a physical location to your access point (optional):</label>
-          <input type="text" name="location" id="location" placeholder="1 Street Address, Whereverville, FL"/>
-          <label for="location">or choose a previous location:</label>
-          <select>
-            <option>407 9th St, Brooklyn, NY</option>
-          </select>
-        </div>
-      </section>
+      <div class="card">
+        <h2>{{buildCampaign.title}}</h2>
+        <section ng-switch on='currentStep'>
+          <div ng-switch-when='0'>
+            <button ng-click="togglePanel('Create Question')" class="btn">+ New Question</button>
+            <ol>
+              <li ng-repeat="question in buildCampaign.questionsList">
+                <!--Start 'Multiple Choice' Template-->
+                <div ng-show="question.type == 'multipleChoice'">
+                  <h3 ng-bind="question.text">Multiple-Choice</h3>
+                  <input type="text" name="question_{{question.id}}" ng-model="question.text" placeholder="Enter your question here." />
+                  <ul class='answers'>
+                    <li ng-repeat="answer in question.answers">
+                      <input type="radio" name="answer_{{question.id}}{{answer.id}}" id="answer_{{question.id}}{{answer.id}}" placeholder="add an answer here."/>
+                      <label for="answer_{{question.id}}{{answer.id}}" ng-bind="answer.text"></label>
+                    </li>
+                  </ul>
+                </div>
+                <!--End 'Multiple Choice' Template-->
+                
+                <!--Start 'rating' Template-->
+                <div ng-show="question.type == 'rating'">
+                  <h3 ng-bind="question.text"></h3>
+                  <input type="text" name="answer_{{question.id}}{{answer.id}}" ng-model="answer.text" placeholder="add an answer here."/>
+                </div>
+                <!--End 'rating' Template-->
+                
+                <!--Start 'freeText' Template-->
+                <div ng-show="question.type == 'freeText'">
+                  <h3 ng-bind="question.text"></h3>
+                  <input type="text" name="answer_{{question.id}}{{answer.id}}" ng-model="answer.text" placeholder="add an answer here."/>
+                </div>
+                <!--End 'freeText' Template-->
+                
+                <!--Start 'binary' Template-->
+                <div ng-show="question.type == 'binary'">
+                  <h3 ng-bind="question.text"></h3>
+                  <input type="text" name="answer_{{question.id}}{{answer.id}}" ng-model="answer.text" placeholder="add an answer here."/>
+                </div>
+                <!--End 'binary' Template-->
+                
+                <!--Start 'number' Template-->
+                <div ng-show="question.type == 'number'">
+                  <h3 ng-bind="question.text"></h3>
+                  <label for="answer_{{question.id}}{{answer.id}}">Choose a number:</label>
+                  <input type="text" name="answer_{{question.id}}{{answer.id}}" ng-model="answer.text" placeholder="add an answer here."/>
+                </div>
+                <!--End 'number' Template-->
+                
+              </li>
+            </ol>
+          </div>
+          <div ng-switch-when='1'>
+            <form method="post" action="">
+              <input type="text" name="title" ng-model="buildCampaign.reward.title" placeholder="Gift Title" />
+              <input type="text" name="description" ng-model="buildCampaign.reward.description" value="" placeholder="Description"/>
+              <input type="text" name="terms" ng-model="buildCampaign.reward.terms" value="" placeholder="Terms and Conditions"/>
+              <input type="date" name="expiration" ng-model="buildCampaign.reward.exp" placeholder="Expiration Date" />
+            </form>
+          </div>
+          <div ng-switch-when='2'>
+            <ul>
+              <li>This will be a list of the social accounts you have connected to this campaign.</li>
+            </ul>
+            <button class="btn" ng-click="togglePanel('social_accounts')">Add new media account</button>
+          </div>
+          
+          <div ng-switch-when='3'>
+            <form ng-submit="sendInvite(first, last, [perm_respond,perm_export,perm_admin], level, buildCampaign.permissions.pending)">
+              <label for="emails">Send email invitations to others to help manage this campaign.</label>
+              <input ng-model="first" type="text" name="name" placeholder="first name"/>
+              <input ng-model="last" type="text" name="name" placeholder="last name"/>
+              <input ng-model="invite_email" type="email" name="email" placeholder="email"/>
+              <fieldset>
+                <input ng-model="perm_respond" type="checkbox" name="perm_respond" ng-true-value="respond" id="perm_respond"/>
+                <label for="perm_respond">respond</label>
+                <input ng-model="perm_export" type="checkbox" name="perm_export" ng-true-value="export" id="perm_export"/>
+                <label for="perm_export">export</label>
+                <input ng-model="perm_admin" type="checkbox" name="perm_admin" ng-true-value="admin" id="perm_admin"/>
+                <label for="perm_admin">admin</label>
+              </fieldset>
+              <button class="new_invite btn">Send</button>
+            </form>
+            <hr>
+            <h2>Permissions set:</h2>
+            <ul>
+              <li ng-repeat="person in buildCampaign.permissions.accepted">
+                {{person.first}} {{person.last}} <small class="status">permission level: {{person.level}}</small>
+              </li>
+            </ul>
+            <h2>Pending Invites:</h2>
+            <ul>
+              <li ng-repeat="person in buildCampaign.permissions.pending">
+                {{person.first}} {{person.last}} ({{person.email}}, {{person.level}}) <small class="status">pending...</small><button class="btn right clear">resend</button>
+              </li>
+            </ul>
+          </div>
+          
+          <div ng-switch-when='4'>
+            <label for="url">Add a physical location to your access point (optional):</label>
+            <input type="text" name="location" id="location" placeholder="1 Street Address, Whereverville, FL"/>
+            <label for="location">or choose a previous location:</label>
+            <select>
+              <option>407 9th St, Brooklyn, NY</option>
+            </select>
+          </div>
+        </section>
+      </div>
     </div>
   </div>
 
