--- a/partials/dashboard.html
+++ b/partials/dashboard.html
@@ -31,6 +31,7 @@
     </div>
     <ul id="campaign_list" class="object_list">
       <li ng-repeat="campaign in campaignList">
+        <button class="btn right" ng-click="deleteCampaign(campaign)">delete</button>
         <button class="btn right" ng-click="duplicateMode(true, campaign)">duplicate</button>
         <a href="#/campaign/{{campaign.id}}/instances">
           <small>@{{campaign.handle}}</small>
@@ -39,14 +40,14 @@
       </li>
       <li ng-show="duplicating_mode">
         <form ng-submit="duplicateCampaign(temp_name, temp_handle)">
-          <input type="text" name="temp_name" ng-model="temp_name" placeholder="Type a new name for this duplicated campaign."/>
+          <input type="text" name="temp_name" ng-model="temporary_duplicate.title" placeholder="Type a new name for this duplicated campaign."/>
           <label>Choose a handle</label>
           <select ng-model="temp_handle">
             <option ng-repeat="handle in handleList">{{handle}}</option>
             <option disabled="true">no more available listening points</option>
           </select>
           <button type="submit" class="btn">save</button>
-          <button type="reset" class="btn" ng-click="duplicateMode(false, undefined)">cancel</button>
+          <button type="reset" class="btn" ng-click="duplicateMode(false, '')">cancel</button>
         </form>
       </li>
     </ul>
