--- a/css/app.css
+++ b/css/app.css
@@ -487,6 +487,7 @@ form.reply {
 fieldset {
   border: none;
   margin: 0;
+  padding: 0;
 }
 
 input[type=text], input[type=email], input[type=number], input[type=date] {
