--- a/css/app.css
+++ b/css/app.css
@@ -12,6 +12,7 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+  cursor: pointer;
 }
 
 ul, ol {
@@ -218,7 +219,7 @@ p {
   position: absolute;
   width: 100%;
   padding: 20px;
-  top: 30px;
+  top: 0;
   z-index: 0;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -229,6 +230,14 @@ p {
   -o-transition: all 500ms ease-in-out;
   transition: all 500ms ease-in-out;
     -webkit-transform: translate3d(0, 0, 0);
+}
+
+.main_nav h3 {
+  margin-top: 30px;
+}
+
+.main_nav li:hover {
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 .visible {
@@ -317,7 +326,7 @@ nav a {
   border: 1px solid #989998;
 }
 
-.instance > article {
+.instance > .btn_set.vert + article {
   margin-right: 50px;
 }
 
@@ -326,6 +335,8 @@ nav a {
   margin-left: 20px;
   font-size: .9em;
   border-left: 3px solid #545554;
+  -webkit-transition: all linear 1s;
+  
 }
 
 .reply {
@@ -490,11 +501,12 @@ fieldset {
   padding: 0;
 }
 
-input[type=text], input[type=email], input[type=number], input[type=date] {
+input[type=text], input[type=email], input[type=number], input[type=date], input[type=password], textarea {
   display: block;
   width: 100%;
-  padding: 8px;
-  margin: 4px 0;
+  height: 1em;
+  padding: 1.4em .8em;
+  margin: .5em 0;
   font-size: .8em;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -506,6 +518,11 @@ input[type=text], input[type=email], input[type=number], input[type=date] {
   -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.39), inset 0 1px 2px rgba(0, 0, 0, 0.18);
   -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.39), inset 0 1px 2px rgba(0, 0, 0, 0.18);
   box-shadow: 0 1px 0 rgba(255, 255, 255, 0.39), inset 0 1px 2px rgba(0, 0, 0, 0.18);
+}
+
+textarea {
+  height: 6em;
+  padding: 1em;
 }
 
 /* Routing transistions */
