--- a/partials/dashboard.html
+++ b/partials/dashboard.html
@@ -11,8 +11,8 @@
 
 <div class="scroller_wrapper">
   <section class="scroller">
-    <button href="#/new" class="btn full_width" ng-click="start_new = true" ng-show="!start_new">+ New Campaign</button>
-    <div ng-show="start_new">
+    <button href="#/new" class="btn full_width" ng-click="toggleNewMode()" ng-show="!new_mode">+ New Campaign</button>
+    <div ng-show="new_mode">
       <form ng-submit="createCampaign(new_campaign_title, handle, is_local, new_campaign_locale, discoverable)">
         <fieldset>
           <input id="has_handle_false" type="radio" name="has_handle" ng-model="has_handle" value="old" />
@@ -30,7 +30,7 @@
         </fieldset>     
         <input type="text" name="new_campaign_title" placeholder="Title for new campaign" ng-model="new_campaign_title"/>   
         <button class="btn" type="submit" ng-click="resetStep()">Continue</button>
-        <button class="btn" ng-click="start_new = false" type="button">cancel</button>
+        <button class="btn" ng-click="toggleNewMode()" type="button">cancel</button>
       </form>
     </div>
     <ul id="campaign_list" class="object_list">
