updated angular version, and started to use the new ng-animate directive.

--- a/partials/main_header.html
+++ b/partials/main_header.html
@@ -1,2 +1,2 @@
-<button ui-event="{click : 'toggleSidebar()'}" class="btn right">menu</button>
+<button ui-event="{click : 'toggleSidebar('left')'}" class="btn right">menu</button>
 <h1>{{title}}</h1>
