--- a/partials/settings.html
+++ b/partials/settings.html
@@ -1,5 +1,5 @@
 <header>
-  <button ng-click=toggleSidebar() class="btn left">menu</button>
+  <button ng-click=toggleSidebar('left') class="btn left">menu</button>
     <span ng-switch-when="false">edit</span>
     <span ng-switch-when="true">done</span>
   </button>
