--- a/css/app.css
+++ b/css/app.css
@@ -53,6 +53,42 @@ main {
   box-sizing: border-box;
 }
 
+.dimmer {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  z-index: 100;
+  opacity: .5;
+  -webkit-transition: all 500ms ease-in-out;
+  -moz-transition: all 500ms ease-in-out;
+  -ms-transition: all 500ms ease-in-out;
+  -o-transition: all 500ms ease-in-out;
+  transition: all 500ms ease-in-out;
+  background-color: #000000;
+}
+
+.fade-hide-setup, .fade-show-setup {
+  -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+  -moz-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+  -o-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+  transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+}
+
+.fade-hide-setup {
+  opacity:.5;
+}
+.fade-hide-setup.fade-hide-start {
+  opacity:0;
+}
+
+.fade-show-setup {
+  opacity:0;
+}
+.fade-show-setup.fade-show-start {
+  opacity:.5;
+}
+
+
 .focus {
   -webkit-transform: translateX(0%);
   opacity: 1;
@@ -62,7 +98,6 @@ main {
   -webkit-transform: translateX(80%);
   -moz-transform: translateX(80%);
   transform: translateX(80%);
-  opacity: .8;
 }
 
 .scroller_wrapper {
@@ -212,6 +247,11 @@ p {
 
 .crumb:last-of-type {
   border-right: none;
+}
+
+.templates li {
+  display: inline-block;
+  padding: 4px 0;
 }
 
 .main_nav {
