--- a/partials/inbox.html
+++ b/partials/inbox.html
@@ -1,5 +1,5 @@
 <header>
-  <button ui-event="{click : 'toggleSidebar()'}" class="btn left">menu</button>
+  <button ng-click="toggleSidebar('left')" class="btn left">menu</button>
   <h1 ng-bind="title"></h1>
 </header>
 <div class="scroller_wrapper">
