Created a factory to handle all data objects. Rewards list page is currently using this method, more to come.

--- a/css/app.css
+++ b/css/app.css
@@ -51,6 +51,12 @@ main {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  -webkit-transition: all 500ms ease-in-out;
+  -moz-transition: all 500ms ease-in-out;
+  -ms-transition: all 500ms ease-in-out;
+  -o-transition: all 500ms ease-in-out;
+  transition: all 500ms ease-in-out;
+  background-color: #000000;
 }
 
 .dimmer {
