--- a/partials/settings.html
+++ b/partials/settings.html
@@ -1,8 +1,5 @@
 <header>
-  <button ng-click=toggleSidebar('left') class="btn left">menu</button>
-    <span ng-switch-when="false">edit</span>
-    <span ng-switch-when="true">done</span>
-  </button>
+  <button ng-click="toggleSidebar('left')" class="btn left">menu</button>
   <h1 ng-bind="title"></h1>
 </header>
 
